# data_pipeline

./: .gitignore  requirements.txt  unzip_okx_data.py
ccapi-recorder/example/: CMakeLists.txt
ccapi-recorder/example/src/execution_management_simple_subscription/: CMakeLists.txt  main.cpp
ccapi/app/: CMakeLists.txt  CMakeLists_pm.txt  CMakeLists_working_default.txt
ccapi/app/include/: conf  config_cross.env  config_cross_arbitrage_trader_50.env  config_cross_arbitrage_trader_60.env  config_cross_bitmex_bitmex.env  config_cross_dbg.env  config_cross_deribit_binance_prod.env
ccapi/app/include/app/: ConfigReader.h  common.h  event_handler_base_sw_skewl.h  event_handler_base_swl production20240809.h  event_handler_base_swl.h  event_handler_base_swl_20250302.h  event_handler_base_swl_aws_legacy.h  event_handler_base_swl_bck_20240515.h  event_handler_base_swl_bckup_02.h  event_handler_base_swl_bckup_03.h  event_handler_base_swl_binance.h  event_handler_base_swl_dev.h  event_handler_base_swl_no_ts.h  event_handler_base_swl_okx_1.h  event_handler_base_swl_old.h  event_handler_base_swl_prod.h  event_handler_base_swl_prod_01.h  event_handler_base_swl_production20240710.h  event_handler_base_swl_release_no_feed_back_loop.h  event_handler_base_swl_without_cancel_all.h  event_handler_base_swl_working.h  historical_market_data_event_processor_swl.h  historical_market_data_event_processor_swl_bckup.h
ccapi/app/src/cross_arbitrage/: CMakeLists.txt  main.cpp
ccapi/app/src/cross_arbitrage_dbg/: CMakeLists.txt  CMakeLists_working_default.txt  main.cpp
ccapi/app/src/cross_arbitrage_pm/: CMakeLists.txt  main_aws_legacy.cpp  main_bck_01.cpp  main_bck_20240515.cpp  main_dev.cpp
ccapi/include/ccapi_cpp/: ccapi_http_connection.h  ccapi_macro.h  ccapi_market_data_message.h  ccapi_message.h  ccapi_request.h  ccapi_session.h  ccapi_session_configs.h  ccapi_session_options.h  ccapi_ws_connection.h
ccapi/include/ccapi_cpp/service/: ccapi_execution_management_service.h  ccapi_execution_management_service_binance_base copy.h  ccapi_execution_management_service_binance_base.h  ccapi_execution_management_service_binance_coin_futures.h  ccapi_execution_management_service_binance_derivatives_base.h  ccapi_execution_management_service_deribit.h  ccapi_execution_management_service_okx.h  ccapi_market_data_service.h  ccapi_market_data_service_binance_coin_futures_portfolio_margin.h  ccapi_market_data_service_deribit copy.h  ccapi_market_data_service_deribit.h  ccapi_market_data_service_okx.h  ccapi_service.h  ccapi_service_context.h
common/: download_internal_market_data.py  format_okx_data_fred.py  sanity_check.py  spread_binance_data_download.py  sync_internal_market_data.py
common/config/: local_path.yml  server_config.yml
deployment/: __main__.py
deployment/config/: config_to_deploy.yml  mapping.yml  mapping_good.yml
deployment/temporary/: optimization_results.json
deployment/tools/: config_pusher.py  google_sheet_connector.py  google_sheet_connector_good.py  live_assets_data_download.py  trade_size_and_account.py
deployment/tools/optimization/: optimizer.r  quoter_algo.cpp  quoter_rm.cpp  stats.r
optima_finder/: __main__.py  backtesting_engine.py  backtesting_engine_1.py  backtesting_engine_2.py  backtesting_engine_3.py  backtesting_engine_4.py  build_cointegration_test.py  build_cointegration_test_1.py  build_cointegration_test_2.py  build_cointegration_test_3.py  build_cointegration_test_4.py  build_cointegration_test_5.py  build_signal_angle.py  build_signal_angle_2.py  build_signal_angle_3.py  build_signal_angle_4.py  build_signal_angle_5.py  build_signal_angle_6.py  build_signal_angle_8.py  build_signal_angle_9.py  get_live_pnl.py
optima_finder/config/: grid_config.yaml  master.yml  prod.yml  single.yml
optima_finder/results/: optima_finder_pairs.yml
optima_finder/tools/: results_analyser.py  sync_internal_market_data.py
optima_finder/tools/grid_search/: core_quoter_slave_release.r  data_tools.r  grid_engine.R  product_specs.r  quoter_algo.cpp
prod_report_module/: __main__(good).py  __main__.py
prod_report_module/config/: prod_report.yml
prod_report_module/tools/: binance_data_download.py  build_prod_report.py  build_prod_report_1.py  google_sheet_connector.py  google_sheet_connector_good.py  google_sheet_connector_test.py  live_trading_data_download.py  server_data_download.py
prod_report_module/tools/backtesting/: ada_dot.yaml  backtesting_engine.r  backtesting_engine_good.r  core_quoter_slave.r  core_quoter_slave_good.r  product_specs.r  test.py
research/: __main__.py
research/config/: data_server_config.yml  data_server_specs.yml  optima_search.yml  prod_report.yml
research/tools/: binance_data_download.py  build_cointegration_test.py  server_data_download.py
